@@ -14,6 +14,7 @@
 >>8	beshort		5		PowerPC
 >>8	beshort		6		68000
 >>8	beshort		7		SGI
+>>8	beshort		10		Sparc 64bit
 >>8	beshort		11		MIPS little endian
 >>8	beshort		12		ARM
 >>10	string		x		%s
